--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <h1>Vidéo en Direct</h1>
-  <video id="videoPlayer" autoplay controls>
-    <source src="http://localhost:8080/live" type="video/mp4">
-    Votre navigateur ne supporte pas la vidéo.
+  <video id="videoPlayer" autoplay controls width="640">
+    <source src="test.mp4" type="video/mp4">
+    Votre navigateur ne supporte pas la lecture vidéo.
   </video>
 </body>
 </html>
